--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ textarea {
   cursor: pointer;
 }
 
-.button,
 .btn {
   background-color: gray;
   color: white;
@@ -109,6 +108,10 @@ textarea {
   width: 8rem;
   height: 3rem;
   margin-left: 1rem;
+}
+
+.btn:hover {
+  background-color: rgb(0, 71, 0);
 }
 
 .workTime {
