--- a/style.css
+++ b/style.css
@@ -48,32 +48,12 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past {
-  background-color: #d3d3d3;
-  color: white;
-}
-
-.present {
-  background-color: #ff6961;
-  color: white;
-}
-
-.future {
-  background-color: #77dd77;
-  color: white;
-}
-
 .saveBtn {
   border-left: 1px solid rgb(53, 49, 49);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-}
-
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all 0.3s ease-in-out;
 }
 
 .hstack {
@@ -97,8 +77,10 @@ textarea {
 }
 
 .form-control:hover {
-  border: black solid 6px;
+  border: gray solid 5px;
   cursor: pointer;
+  color: black;
+  font-weight: bold;
 }
 
 .btn {
@@ -111,7 +93,8 @@ textarea {
 }
 
 .btn:hover {
-  background-color: rgb(0, 71, 0);
+  background-color: rgb(144, 144, 70);
+  border: gray groove 3px;
 }
 
 .workTime {
